syntax = "proto3";

package groupcachepb;

message GetRequest {
    string group = 1;
    string key = 2; //utf-8
}

message GetResponse {
    bytes value = 1;
    double minute_qps = 2;
}

service GroupCache{
    rpc Get(GetRequest) returns (GetResponse);
}
